--- a/css/_tpl/cu.css
+++ b/css/_tpl/cu.css
@@ -48,7 +48,6 @@
   font-weight: 900;
 }
 
-
   h5 {
     text-align: left;
     position: relative;
@@ -69,6 +68,33 @@
     top: 60%;
     position: absolute;
   }
+
+  .icons_service {
+    margin: auto;
+  }
+
+  .contacto_info {
+    padding: 40px;
+    text-align: left;
+  }
+
+.py-4:hover .image {
+  opacity: 0.2%;
+  background-color: #0a53be;
+}
+
+
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+  background-color: #0a53be;
+  width: 100%;
+}
 
   .carreras h2 {
     color: #003366;
