--- a/app.css
+++ b/app.css
@@ -36,7 +36,7 @@
 /* */
 
 body {
-  font-family: 'Urbanist-Regular', sans-serif;
+  font-family: 'Urbanist-Regular';
 }
 
 img {
@@ -47,7 +47,7 @@ img {
 
 .btn {
   border-radius: 15px;
-  letter-spacing: 0.5px;
+  letter-spacing: .5px;
 }
 
 .btn-primary {
@@ -138,11 +138,11 @@ header .navbar-brand img {
 #navbar_Umg .nav-link {
   color: #207faf;
   cursor: pointer;
-  font-family: "Urbanist-Bold", sans-serif;
+  font-family: "Urbanist-Bold";
 }
 
 #navbar_Umg .dropdown-toggle::after {
-  background: url(img/dropdown-toggle.after.svg);
+  background: url(../img/dropdown-toggle.after.svg) no-repeat;
   border: none;
   display: none;
   height: .5em;
@@ -163,7 +163,7 @@ header .navbar-brand img {
 
 #navbar_Umg .dropdown-menu h3 {
   color: #003168;
-  font-family: "Urbanist-Bold", sans-serif;
+  font-family: "Urbanist-Bold";
 }
 
 #navbar_Umg .dropdown-menu nav li {
@@ -273,6 +273,14 @@ header .navbar .navbar-hr hr {
 
 @media (min-width: 768px) {
 
+  header .navbar::before {
+    height: calc(111px + .9rem);
+  }
+
+  header .navbar.scrollDown {
+    margin-top: -111px !important;
+  }
+
   header .navbar-brand img {
     width: 99px;
   }
@@ -320,6 +328,14 @@ header .navbar .navbar-hr hr {
 }
 
 @media (min-width: 1200px) {
+
+  header .navbar::before {
+    height: calc(123px + .9rem);
+  }
+
+  header .navbar.scrollDown {
+    margin-top: -123px !important;
+  }
 
   header .navbar > .container {
     position: unset;
@@ -378,9 +394,15 @@ header .navbar .navbar-hr hr {
     border-right: 2px solid #b7ecff;
   }
 
+  #navbar_Umg hr {
+    border-top: 2px solid #b7ecff;
+    opacity: 1;
+    width: calc(100% - 15px);
+  }
+
   #navbar_Umg .nav-link {
     color: #fff;
-    font-family: "Urbanist-Regular", sans-serif;
+    font-family: "Urbanist-Regular";
     position: relative;
   }
 
@@ -413,7 +435,92 @@ header .navbar .navbar-hr hr {
 
 }
 
+/* */
 
-  .text-normal-xl {
-    text-transform: none !important;
+footer {
+  background: #01274f;
+  margin-bottom: -16px;
+}
+
+footer::before {
+  background: url('img/footer.before.svg');
+  background-position: top;
+  background-size: 100% 100%;
+  content: "";
+  display: block;
+  height: 30px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+footer nav h3 {
+  color: #00c1ff;
+  font-family: 'Urbanist-Bold';
+}
+
+footer nav a {
+  font-size: 18px;
+}
+
+footer hr {
+  border-top-color: #fff;
+  opacity: 1;
+}
+
+footer .footer-icon {
+  border: 1px solid #fff;
+  border-radius: 100%;
+  height: 42px;
+  width: 42px;
+}
+
+footer .column-rule::before,
+footer .column-rule::after {
+  content: "";
+  display: none;
+  position: absolute;
+  height: 100%;
+  top: 0;
+  width: 2px;
+}
+
+footer .column-rule::before {
+  border-left: 1px solid #fff;
+  left: -5px;
+}
+
+footer .column-rule::after {
+  border-right: 1px solid #fff;
+  right: -10px;
+}
+
+@media (min-width: 576px) {
+
+  footer::before {
+    height: 40px;
   }
+
+}
+
+@media (min-width: 768px) {
+
+  footer::before {
+    height: 60px;
+  }
+
+}
+
+@media (min-width: 1200px) {
+
+  footer::before {
+    height: 80px;
+  }
+
+  footer .column-rule::before,
+  footer .column-rule::after {
+    display: block;
+  }
+
+}
