--- a/css/flaticon-uicons.css
+++ b/css/flaticon-uicons.css
@@ -1,3 +1,4 @@
+@import url('uicons-brands.css');
 @import url('uicons-bold-rounded.css');
 @import url('uicons-bold-straight.css');
 @import url('uicons-regular-rounded.css');
