--- a/css/_tpl/cu.css
+++ b/css/_tpl/cu.css
@@ -83,19 +83,27 @@
     bottom: 0px;
     content: "";
     display: block;
-    height: 320px;
+    height: 72px;
     position: absolute;
     width: 100%;
+   
     }
 
     .banner h1 {
-      color: #fff;
       font-family: "Lato-LightItalic", sans-serif;
-      font-size: 6.2em;
+      font-size: 2.0em;
       text-shadow: 3px 3px #000;
-      line-height: 71px;
-      position: relative;
+      line-height: 40px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      padding: 10px;
+      border-radius: 5px;
     }
+
+
 
   .contacto_info {
     padding: 40px;
@@ -179,7 +187,8 @@
 }
 
 .carreras {
-  padding-top: 0px;
+  margin-top: 0px;
+  position: relative;
 }
 
   .carreras h2 {
@@ -229,6 +238,11 @@
       font-size: 23px;
     }
 
+    .banner::after {
+      bottom: 0px;
+      height: 290px;
+      }
+
   }
   
   @media (min-width: 768px) {
@@ -242,7 +256,10 @@
       line-height: 1;
     }
 
- 
+    .banner::after {
+      bottom: 0px;
+      height: 290px;
+      }
   
   }
   
@@ -268,10 +285,15 @@
     .carreras h4 {
       font-size: 20px;
     }
+
+    .banner::after {
+      bottom: 0px;
+      height: 290px;
+      }
   
   }
   
-  @media (min-width: 1200px) {
+  @media (min-width: 1400px) {
 
     .carreras h1 label {
       font-size: 80px;
@@ -281,7 +303,25 @@
       font-size: 2.9em;
       line-height: 1;
     }
+
+    .banner::after {
+      bottom: 0px;
+      height: 309px;
+      }
   
+      .banner h1 {
+        font-size: 6.2em;
+        line-height: 100px;
+        top: 40%;
+      }
+
+      .carreras {
+        margin-top: -200px;
+        position: relative;
+      }
+
+   
+
   }
   
   /* */
