--- a/css/_tpl/cu.css
+++ b/css/_tpl/cu.css
@@ -7,6 +7,9 @@
   
   p.text-x2 {
     font-size: 20px;
+    margin-top: 0px;
+    margin-bottom: 90px;
+    color: #4d4d4d;
   }
 
   .masthead {
@@ -28,7 +31,7 @@
   bottom: -80px;
   left: -10%;
   width: 120%;
-  height: 125px;
+  height: 220px;
   background: #fff;
   border-radius: 50%;
 }
@@ -36,13 +39,14 @@
 .masthead h1 {
     color: #fff;
     font-family: "Lato-LightItalic", sans-serif;
-    font-size: 6.2em;
+    font-size: 5.0em;
     text-shadow: 3px 3px #000;
     line-height: 71px;
+    margin-left: 45px;
   }
 
 .masthead h1 label {
-  font-size: 1.4em;
+  font-size: 1.0em;
   line-height: 1;
   display: block;
   text-shadow: 3px 3px #000;
@@ -56,6 +60,7 @@
     font-family: "Lato-BlackItalic", sans-serif;
     display: block;
     color: #003366;
+    padding-top: 10px;
   }
   
  
@@ -76,35 +81,6 @@
     margin: auto;
   }
 
-  .banner::after {
-    background: url("../../img/forma_portada.svg");
-    background-position: bottom;
-    background-size: 100% 100%;
-    bottom: 0px;
-    content: "";
-    display: block;
-    height: 72px;
-    position: absolute;
-    width: 100%;
-   
-    }
-
-    .banner h1 {
-      font-family: "Lato-LightItalic", sans-serif;
-      font-size: 2.0em;
-      text-shadow: 3px 3px #000;
-      line-height: 40px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: white;
-      padding: 10px;
-      border-radius: 5px;
-    }
-
-
-
   .contacto_info {
     padding: 40px;
     text-align: left;
@@ -119,6 +95,233 @@
   background-color: #0a53be;
 }
 
+.carreras {
+  position: relative;
+  margin-top: -95px;
+  margin-bottom: 80px;
+}
+
+
+.datos-carrera:after {
+  border-right: none;
+}
+
+
+.carreras li {
+  color: #ffc602;
+}
+
+/* */
+
+.Aula {
+  /*background: #c7f1ff;*/
+  color: #8f8e9c;
+}
+
+.Aula::before {
+  background-position: top;
+  background-size: 100% 100%;
+  content: "";
+  display: block;
+  height: 30px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.Aula h3.display-3 span {
+  font-family: "Lato-LightItalic";
+}
+
+.Aula .Escritorio::before {
+  background-image: url("../../img/Escritorio-bg.webp");
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  content: "";
+  display: block;
+  height: 105%;
+  left: -14%;
+  position: absolute;
+  top: 7%;
+  width: 105%;
+  z-index: -1;
+}
+
+.Aula .vistas-escritorio div:nth-child(1)::before,
+.Aula .vistas-escritorio div:nth-child(2)::before,
+.Aula .vistas-escritorio div:nth-child(3)::before {
+  border-right: #e18333 3px solid;
+  content: "";
+  display: block;
+  height: 50%;
+  position: absolute;
+  right: 1.5px;
+  top: 25%;
+  width: 3%;
+}
+
+.Aula .vistas-escritorio div:nth-child(2)::before {
+  display: none;
+}
+
+.Aula .vistas-escritorio div:nth-child(1)::after,
+.Aula .vistas-escritorio div:nth-child(2)::after {
+  border-bottom: #e18333 3px solid;
+  bottom: 1.5px;
+  content: "";
+  display: block;
+  right: 25%;
+  position: absolute;
+  width: 50%;
+}
+
+.Aula .aulas div {
+  aspect-ratio: 1;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.Aula .Learnlab {
+  background-image: url('../../img/villa_nueva/villa_nueva_laboratorio1.webp');
+}
+
+.Aula .Villanueva_Aula {
+  background-image: url('../../img/villa_nueva/villa_nueva_laboratorio2.webp');
+}
+
+.Aula .VillaNueva_LaboratorioComputo {
+  background-image: url('../../img/villa_nueva/villa_nueva_laboratorio1.webp');
+}
+
+.Aula .VillaNueva_Arquitectura_Laboratorio {
+  background-image: url('../../img/villa_nueva/villa_nueva_laboratorio2.webp');
+}
+
+.Aula .Jutiapa_LaboratorioArquitectura {
+  background-image: url('../../img/villa_nueva/villa_nueva_laboratorio1.webp');
+}
+
+.Aula .aulas a {
+  background: rgba(0,193,255,.0);
+  font-family: "Urbanist-Bold";
+  left: 0;
+  opacity: 0;
+  top: 0;
+  transition: .5s;
+}
+
+.Aula .aulas .btn {
+  align-items: center;
+  background: none;
+  border-radius: 100%;
+  color: #000;
+  display: flex;
+  font-family: uicons-regular-rounded !important;
+  height: 30px;
+  justify-content: center;
+  mix-blend-mode: screen;
+  opacity: 0;
+  position: absolute;
+  right: 30px;
+  top: -100%;
+  transition: .5s;
+  width: 30px;
+}
+
+.Aula .aulas a:hover {
+  background: rgba(0,193,255,.8);
+  opacity: 1;
+  transition: .5s;
+}
+
+.Aula .aulas a label {
+  margin-top: 111%;
+  opacity: 0;
+  transition: .5s;
+}
+
+.Aula .aulas a:hover label {
+  opacity: 1;
+  margin-top: 0;
+}
+
+.Aula .aulas a:hover .btn {
+  opacity: 1;
+  top: 30px;
+}
+
+.Aula .aulas .btn::before {
+  background: #fff;
+  bottom: 0;
+  border-radius: 100%;
+  content: "";
+  left: 0;
+  mix-blend-mode: color-burn;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+@media (min-width: 576px) {
+
+  .Aula::before {
+    height: 40px;
+  }
+
+}
+
+@media (min-width: 768px) {
+
+  .Aula::before {
+    height: 60px;
+  }
+
+  .Aula .vistas-escritorio div:nth-child(2)::before {
+    display: block;
+  }
+
+  .Aula .vistas-escritorio div:nth-child(1)::after,
+  .Aula .vistas-escritorio div:nth-child(2)::after {
+    display: none;
+  }
+
+  .Aula .aulas .btn {
+    height: 40px;
+    font-size: 20px;
+    width: 40px;
+  }
+
+}
+
+@media (min-width: 992px) {
+
+  .Aula .aulas .btn {
+    height: 30px;
+    font-size: initial;
+    width: 30px;
+  }
+
+}
+
+@media (min-width: 1200px) {
+
+  .Aula::before {
+    height: 80px;
+  }
+
+  .Aula h3.display-3 {
+    font-size: 4rem;
+  }
+
+  .Aula .aulas .btn {
+    height: 40px;
+    font-size: 20px;
+    width: 40px;
+  }
+
+}
 
 .carousel-item .col img {
   width: 100%;
@@ -143,7 +346,7 @@
   cursor: pointer;
   border-radius: 0; /* Quitamos el borde circular de las flechas */
   color: white;
-  font-size: 24px;
+  font-size: 40px;
   width: 40px; /* Ajustar el ancho de las flechas */
   height: 40px; /* Ajustar el alto de las flechas */
   display: flex;
@@ -151,6 +354,15 @@
   justify-content: center;
   background-color: transparent; /* Cambiar el color de fondo de las flechas a transparente */
   border-bottom: 0; /* Quitamos la línea de abajo de las flechas */
+}
+
+.carousel-control-next-icon, .carousel-control-prev-icon {
+  display: inline-block;
+  width: 2rem;
+  height: 3rem;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: 100% 100%;
 }
 
 .carousel-control-prev-icon,
@@ -186,11 +398,6 @@
   background-color: #0a53be;
 }
 
-.carreras {
-  margin-top: 0px;
-  position: relative;
-}
-
   .carreras h2 {
     color: #003366;
     font-family: "Lato-LightItalic", sans-serif;
@@ -213,6 +420,22 @@
     line-height: 1.7;
     text-decoration: none;
   }
+
+
+  .icon-container {
+    text-align: center;
+    transition: transform 0.3s;
+    z-index: 2;
+}
+
+.icon-container i {
+    font-size: 3rem;
+    color: #333;
+}
+
+.icon-container:hover {
+    transform: scale(1.3);
+}
   
   @media (min-width: 576px) {
 
@@ -238,11 +461,6 @@
       font-size: 23px;
     }
 
-    .banner::after {
-      bottom: 0px;
-      height: 290px;
-      }
-
   }
   
   @media (min-width: 768px) {
@@ -256,10 +474,7 @@
       line-height: 1;
     }
 
-    .banner::after {
-      bottom: 0px;
-      height: 290px;
-      }
+ 
   
   }
   
@@ -285,15 +500,10 @@
     .carreras h4 {
       font-size: 20px;
     }
-
-    .banner::after {
-      bottom: 0px;
-      height: 290px;
-      }
   
   }
   
-  @media (min-width: 1400px) {
+  @media (min-width: 1200px) {
 
     .carreras h1 label {
       font-size: 80px;
@@ -304,31 +514,28 @@
       line-height: 1;
     }
 
-    .banner::after {
-      bottom: 0px;
-      height: 309px;
-      }
+    .datos-carrera:after {
+      border-right: 1px solid #0097ff;
+      content:'';
+      height: 70px;
+      width: 300px;
+      position: absolute;
+      top: 21px;
+      z-index: 1;
+    }
   
-      .banner h1 {
-        font-size: 6.2em;
-        line-height: 100px;
-        top: 40%;
-      }
-
-      .carreras {
-        margin-top: -200px;
-        position: relative;
-      }
-
-   
-
   }
   
   /* */
 
+  section {
+    margin-bottom: 50px;
+  }
+
   section.s {
     background: #003366;
     color: #fff;
+    margin-bottom: 50px;
   }
 
   section.s h5 {
