--- a/app.css
+++ b/app.css
@@ -17,7 +17,7 @@
   src: url("webfont/PresciousSoul.eot") format("embedded-opentype"),
     url("webfont/PresciousSoul.woff2") format("woff2"),
     url("webfont/PresciousSoul.woff") format("woff");
-} 
+}
 
 @font-face {
   font-family: "Urbanist-Bold";
@@ -33,7 +33,7 @@
     url("webfont/Urbanist-Regular.woff") format("woff");
 }
 
-.ff-Lato-bi {
+.ff-Lato-bli {
   font-family: "Lato-BlackItalic";
 }
 
@@ -89,11 +89,26 @@ img {
 
 /* */
 
-header .navbar,
-header .navbar:hover,
-header .navbar.navbar.scrollDown:hover {
-  margin-top: 0 !important;
+header {
+  margin: 0;
   transition: .5s;
+}
+
+header.visible {
+  margin-top: calc(99px + 2.4rem);
+}
+
+header .navbar {
+  margin-top: calc(-99px - .9rem);
+  padding-top: .5rem !important;
+  transition: .5s;
+}
+
+header .navbar:hover,
+header .navbar.mt-0,
+header .navbar.show,
+header .navbar.collapse-show {
+  margin-top: 0 !important;
 }
 
 header .navbar::before {
@@ -101,21 +116,20 @@ header .navbar::before {
   box-shadow: rgba(0,0,0,.35) 0px 5px 15px;
   content: "";
   display: block;
-  height: calc(99px + .9rem);
-  opacity: 0;
+  height: calc(99px + 1.8rem);
+  opacity: 1;
   position: absolute;
   top: -.5rem !important;
   transition: .5s;
   width: 100%;
 }
 
-header .navbar.scrollDown {
-  margin-top: -99px !important;
+header .navbar.bg-transparent::before {
+  opacity: 0;
 }
 
-header .navbar.show::before,
-header .navbar.sticky::before {
-  opacity: 1;
+header.visible .navbar::before {
+  opacity: 1 !important;
 }
 
 header .navbar-brand img {
@@ -168,7 +182,7 @@ header .navbar-brand img {
 }
 
 #navbar_Umg .dropdown-toggle::after {
-  background: url(../img/dropdown-toggle.after.svg) no-repeat;
+  background: url(img/dropdown-toggle.after.svg) no-repeat;
   border: none;
   display: none;
   height: .5em;
@@ -219,8 +233,17 @@ header .navbar-brand img {
 }
 
 #navbar_Umg .bg-info h6 span {
-  color: #82e5ff;
-  text-shadow: -1px 0 #003168, 0 1px #003168, 1px 0 #003168, 0 -1px #003168;
+  color: transparent;
+  
+  -webkit-text-stroke-width: .45px;
+  -webkit-text-stroke-color: #003168;
+}
+
+header .i18n {
+  padding-right: .5rem;
+  position: absolute;
+  right: 4px;
+  top: -5px;
 }
 
 header .navbar button.navbar-toggler {
@@ -265,19 +288,60 @@ header .navbar .navbar-hr .container {
   height: 111px;
 }
 
-header .navbar .navbar-hr hr {
+header .navbar.bg-transparent .navbar-hr hr {
   border-top: 1px solid #fff;
   bottom: -1px;
   opacity: 1;
   position: absolute;
   left: 111px;
+  transition: .75s;
   width: 100vw;
+}
+
+header .navbar .navbar-hr hr {
+  left: calc(100vw + 111px);
+}
+
+@media (min-width: 380px) {
+
+  header.visible {
+    margin-top: calc(99px + 1.8rem);
+  }
+
+  header .navbar {
+    padding-top: 0 !important;
+  }
+
+  header .navbar::before {
+    height: calc(99px + .9rem);
+  }
+
+  header .navbar {
+    margin-top: -99px !important;
+  }
+
+  header .i18n {
+    padding-right: .75rem;
+    position: relative;
+    right: unset;
+    top: unset;
+  }
+
+  header .navbar.show .i18n,
+  header .navbar.collapse-show .i18n {
+    display: none;
+  }
+
 }
 
 @media (min-width: 576px) {
 
   #navbar_Umg {
     top: 26px;
+  }
+
+  header .i18n {
+    padding-right: 1rem;
   }
 
   header .navbar button.miumg,
@@ -299,11 +363,15 @@ header .navbar .navbar-hr hr {
 
 @media (min-width: 768px) {
 
+  header.visible {
+    margin-top: calc(111px + 1.9rem);
+  }
+
   header .navbar::before {
     height: calc(111px + .9rem);
   }
 
-  header .navbar.scrollDown {
+  header .navbar {
     margin-top: -111px !important;
   }
 
@@ -355,11 +423,15 @@ header .navbar .navbar-hr hr {
 
 @media (min-width: 1200px) {
 
+  header.visible {
+    margin-top: calc(123px + 1.8rem);
+  }
+
   header .navbar::before {
     height: calc(123px + .9rem);
   }
 
-  header .navbar.scrollDown {
+  header .navbar {
     margin-top: -123px !important;
   }
 
@@ -372,14 +444,16 @@ header .navbar .navbar-hr hr {
     width: 111px;
   }
 
-  #navbar_Umg,
-  #navbar_Umg.show,
-  #navbar_Umg.sticky {
+  #navbar_Umg {
     background: transparent;
     height: auto !important;
     overflow: unset;
     top: unset;
     width: auto !important;
+  }
+
+  header .navbar.show::before {
+    opacity: 1 !important;
   }
 
   #navbar_Umg .navbar-nav {
@@ -406,8 +480,7 @@ header .navbar .navbar-hr hr {
     -ms-overflow-style: none;
   }
 
-  #navbar_Umg .dropdown-menu.show,
-  #navbar_umg .dropdown-menu.sticky {
+  #navbar_Umg .dropdown-menu.show {
     opacity: 1;
     top: 99px;
   }
@@ -429,6 +502,7 @@ header .navbar .navbar-hr hr {
   #navbar_Umg .nav-link {
     color: #fff;
     font-family: "Urbanist-Regular";
+    margin-right: -9px;
     position: relative;
   }
 
@@ -448,121 +522,30 @@ header .navbar .navbar-hr hr {
     filter: unset;
   }
 
+  header .i18n {
+    margin-top: -4px;
+  }
+
+  header .navbar .i18n {
+    display: unset !important;
+  }
+
   header .navbar button.miumg,
   header .navbar button.s,
   header .navbar button.navbar-toggler {
     margin-top: -.25rem !important;
   }
 
-  header .navbar.show .navbar-hr,
-  header .navbar.sticky .navbar-hr {
-    display: none !important;
+  header .navbar.show .navbar-hr {
+    opacity: 0;
   }
 
 }
 
-/* */
+@media (min-width: 1400px) {
 
-/* */
-
-.redes-sociales {
-  left: 10px;
-  transition: .5s;
-  top: 0;
-  width: 40px;
-  z-index: 2;
-}
-
-.redes-sociales a {
-  border-radius: 100%;
-  color: #fff;
-  height: 35px;
-  transition: .5s;
-  width: 35px;
-}
-
-.redes-sociales a:hover {
-  background-color: #fff;
-  transform: scale(1.3);
-}
-
-.redes-sociales .fi {
-  font-size: 1.325rem;
-  line-height: 1.325rem;
-  margin-top: .2pc;
-}
-
-.redes-sociales .fi-brands-linkedin {
-  margin-left: 3px;
-}
-
-.redes-sociales a:hover .fi-brands-linkedin {
-  color: #0a66c2;
-}
-
-.redes-sociales .fi-brands-facebook {
-  margin-left: .5px;
-}
-
-.redes-sociales a:hover .fi-brands-facebook {
-  color: #4267b2;
-}
-
-.redes-sociales .fi-brands-youtube {
-  margin-left: .5px;
-}
-
-.redes-sociales a:hover .fi-brands-youtube {
-  color: #ff0000;
-}
-
-.redes-sociales a:hover .fi-brands-instagram {
-  color: #fd1d1d;
-}
-
-.redes-sociales .fi-brands-twitter {
-  margin-top: .25pc;
-}
-
-.redes-sociales a:hover .fi-brands-twitter {
-  color: #00acee;
-}
-
-.redes-sociales a:hover .fi-brands-tik-tok {
-  color: #000;
-}
-
-@media (min-width: 768px) {
-
-  .redes-sociales {
-    left: 15px;
-  }
-
-  .redes-sociales a {
-    height: 40px;
-    width: 40px;
-  }
-
-  .redes-sociales .fi {
-    font-size: 1.7rem;
-    line-height: 1.7rem;
-    margin-top: .4pc;
-  }
-
-  .redes-sociales a:hover .fi {
-    margin-top: .2pc;
-  }
-
-  .redes-sociales .fi-brands-instagram {
-    margin-left: 1px
-  }
-
-}
-
-@media (min-width: 1200px) {
-
-  .redes-sociales {
-    left: 30px;
+  #navbar_Umg .nav-link {
+    margin-right: unset;
   }
 
 }
