--- a/css/_tpl/info.css
+++ b/css/_tpl/info.css
@@ -89,7 +89,7 @@ h2 {
     justify-content: center;
     font-size: 1.7em;
     padding: 10px;
-
+    margin-bottom: 27px;
 }
 
 h2 label {
@@ -156,56 +156,58 @@ h2 label {
     background-color: #0a53be;
 }
 
-.lista-vinetas {
-    list-style-type: none; /* Quitar las viñetas predeterminadas */
-    padding: 0;
-}
-
-.lista-vinetas li {
-    display: flex; /* Usar flexbox para alinear elementos */
-    align-items: center; /* Alinear verticalmente los elementos */
-    margin-bottom: 5px; /* Espacio entre elementos de la lista */
-}
-
-.lista-vinetas li::before {
-    content: "\2022"; /* Viñeta redonda */
-    font-size: 20px; /* Tamaño de la viñeta */
-    margin-right: 10px; /* Espacio entre la viñeta y el enlace */
-}
-
-.lista-vinetas a {
-    flex: 1; /* Expandir para ocupar el espacio restante */
-    display: inline-block; /* Mantener los enlaces en línea */
-    position: relative; /* Posición relativa para alinear el fondo */
+/* .lista-enlaces li a {
+    display: block;
     padding: 5px;
     text-decoration: none;
-    overflow: hidden; /* Ocultar el exceso de fondo */
+    transition: background-color 0.3s ease;
+    text-align: left;
     color: #4d4d4d;
-}
+    font-size: 1.1em;
+    font-weight: bold;
+  }
+  
+  .lista-enlaces li a:hover {
+    background-color: #f2f2f2; 
+    color: #1e729d;
+    font-weight: bold;
+  } */
 
+  .lista-enlaces li {
+    position: relative;
+    margin-right: 20px; 
+    text-align: left;
+  }
+  
+  .lista-enlaces li a {
+    display: block;
+    padding: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    text-align: left;
+    color: #4d4d4d;
+    font-size: 1.1em;
+  }
 
-/* Efecto de fondo desde abajo */
-.lista-vinetas a::before {
-    content: ''; /* Agregar un pseudo-elemento para el fondo */
+  .lista-enlaces li a:hover {
+    color: #1e729d;
+   
+  }
+  
+  .lista-enlaces li::after {
+    content: "";
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 100%;
-    height: 0;
-    background-color: #f2f2f2; /* Color del fondo */
-    transition: height 0.3s; /* Animación de transición */
-    z-index: 2;
-}
-
-.lista-vinetas a:link, a:hover, .lista-vinetas a:focus {
-    color: #333; /* Cambiar el color del texto al seleccionar el enlace */
-    z-index: 1;
-}
-
-/* Efecto de fondo cuando se pasa el mouse por encima */
-.lista-vinetas a:hover::before {
-    height: 100%; /* Ajustar la altura para revelar el fondo */
-}
+    width: 0;
+    height: 2px; 
+    background-color: #00c1ff; 
+    transition: width 0.3s ease;
+  }
+  
+  .lista-enlaces li:hover::after {
+    width: 100%; 
+  }
 
 .image {
     display: block;
