--- a/css/_tpl/laboratorios-generales.css
+++ b/css/_tpl/laboratorios-generales.css
@@ -15,6 +15,7 @@ html, body{
     overflow: hidden;
   }
 
+
   .carousel-img {
     transition: transform 0.3s;
   }
@@ -25,14 +26,20 @@ html, body{
 
   .carousel-overlay {
     position: absolute;
+    padding-top: 50px;
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
+    background-color: #2fceff;
+    color: #00316b;
     padding: 10px;
     opacity: 0;
     transition: opacity 0.3s;
+    min-height: 120px;
+  }
+
+  .carousel-overlay p {
+    margin-top: 25px;
   }
 
   .carousel-item:hover .carousel-overlay {
@@ -88,6 +95,7 @@ html, body{
     transform: translate(-50%, -50%);
     text-align: left;
 }
+
 
 .titulo-imagen-large {
     position: absolute;
