--- a/css/_tpl/laboratorios-generales.css
+++ b/css/_tpl/laboratorios-generales.css
@@ -10,6 +10,49 @@ html, body{
     url("../../webfont/WhiteDream.woff") format("woff");
 }
 
+.gallery {
+    --g: 8px;   /* the gap */
+    --s: 700px; /* the size */
+    
+    display: grid;
+    border-radius: 50%;
+  }
+  .gallery > img {
+    grid-area: 1/1;
+    width: 700px;
+    aspect-ratio: 1;
+    object-fit: cover;
+    border-radius: 50%;
+    transform: translate(var(--_x,0),var(--_y,0));
+    cursor: pointer;
+    z-index: 0;
+    transition: .3s, z-index 0s .3s;
+  }
+  .gallery img:hover {
+    --_i: 1;
+    z-index: 1;
+    transition: transform .2s, clip-path .3s .2s, z-index 0s;
+  }
+  .gallery:hover img {
+    transform: translate(0,0);
+  }
+  .gallery > img:nth-child(1) {
+    clip-path: polygon(50% 50%,calc(50%*var(--_i,0)) calc(120%*var(--_i,0)),0 calc(100%*var(--_i,0)),0 0,100% 0,100% calc(100%*var(--_i,0)),calc(100% - 50%*var(--_i,0)) calc(120%*var(--_i,0)));
+    --_y: calc(-1*var(--g))
+  }
+  .gallery > img:nth-child(2) {
+    clip-path: polygon(50% 50%,calc(100% - 120%*var(--_i,0)) calc(50%*var(--_i,0)),calc(100% - 100%*var(--_i,0)) 0,100% 0,100% 100%,calc(100% - 100%*var(--_i,0)) 100%,calc(100% - 120%*var(--_i,0)) calc(100% - 50%*var(--_i,0)));
+    --_x: var(--g)
+  }
+  .gallery > img:nth-child(3) {
+    clip-path: polygon(50% 50%,calc(100% - 50%*var(--_i,0)) calc(100% - 120%*var(--_i,0)),100% calc(100% - 120%*var(--_i,0)),100% 100%,0 100%,0 calc(100% - 100%*var(--_i,0)),calc(50%*var(--_i,0)) calc(100% - 120%*var(--_i,0)));
+    --_y: var(--g)
+  }
+  .gallery > img:nth-child(4) {
+    clip-path: polygon(50% 50%,calc(120%*var(--_i,0)) calc(50%*var(--_i,0)),calc(100%*var(--_i,0)) 0,0 0,0 100%,calc(100%*var(--_i,0)) 100%,calc(120%*var(--_i,0)) calc(100% - 50%*var(--_i,0)));
+    --_x: calc(-1*var(--g))
+  }
+
 .carousel-item {
     position: relative;
     overflow: hidden;
@@ -368,16 +411,11 @@ html, body{
         font-size: 2.9em;
         line-height: 1;
     }
-    /*
-          .datos-LaboratorioComputo::after {
-            border-right: 1px solid #0097ff;
-            content: '';
-            height: 70px;
-            width: 300px;
-            position: absolute;
-            top: 21px;
-            z-index: 1;
-          } */
+    
+    .carousel-overlay p {
+        margin-top: 30px;
+        padding-left: 15px;
+      }
 
 
 }
@@ -396,6 +434,9 @@ html, body{
 
     .display-2 {
         font-size: 5.5rem;
+        font-family: "Lato-BlackItalic";
+        text-align: center;
+        color: #003364;
     }
 
 
