--- a/css/_tpl/acercaFacultad/acercaOdontologia.css
+++ b/css/_tpl/acercaFacultad/acercaOdontologia.css
@@ -380,7 +380,7 @@
 
   /* seccion metodologia */
   .estudiante-ficha .img-box {
-    background-image: url("/img/alumnos-arq.webp");
+    background-image: url("../../../img/acerca-odontologia-objetivos.webp");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -720,7 +720,7 @@
         width: 30%;
         top: 68.5%;
         margin-left: -3px;
-        height: 14%;
+        height: 20%;
       }
       .subtittle-swiper{
         top:81%;
@@ -737,7 +737,7 @@
 
     .subtittle-swiper label{
       font-size: 24px;
-      margin-top: -40px;
+      margin-top: 0px;
       margin-left: -3%;
       position: absolute;
     }
@@ -769,11 +769,11 @@
       }
 
       .subtittle-swiper .lbl-vice{
-        margin-left: -50px;
+        margin-left: -116px;
       }
 
       .subtittle-swiper .lbl-secre{
-        margin-left: -70px;
+        margin-left: -133px;
       }
 
       .subtittle-swiper .lbl-cooNutri, 
