--- a/css/_tpl/cu.css
+++ b/css/_tpl/cu.css
@@ -21,9 +21,9 @@ body{
   .masthead {
     height: 100vh;
     min-height: 500px;
-    /*background-image: -webkit-image-set(url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080') 1x);*/
+    background-image: -webkit-image-set(url('../../img/random-background.jpeg') 1x);
     /*background-image: -webkit-image-set(url('http://172.173.170.116/img/villa_nueva/villanueva.webp') 1x);*/
-    background-image: -webkit-image-set(url('../../img/villa_nueva/villanueva.webp') 1x);
+    /* background-image: -webkit-image-set(url('../../img/villa_nueva/villanueva.webp') 1x); */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -39,7 +39,7 @@ body{
       transform: scale(1);
     }
     50% {
-      transform: scale(1.10);
+      transform: scale(1.15);
       /* equals 105% */
     }
     100% {
@@ -161,7 +161,7 @@ h5 label {
 }
 
 .TourVirtual {
-  height: 600px; /* Define la altura deseada para recortar */
+  height: 300px; /* Define la altura deseada para recortar */
   overflow: hidden; /* Oculta el contenido que se sale del contenedor */
 }
 
@@ -177,7 +177,7 @@ h5 label {
   left: 50%;
   position: absolute;
   opacity: .5;
-  top: 30%;
+  top: 45%;
   transform: translateX(-50%) translateY(-30%);
   transition: .5s;
   width: 18%;
@@ -502,12 +502,7 @@ h5 label {
   width: 90% !important;
 }
 
-.image {
-  display: block;
-  width: 100%;
-  height: auto;
-  background-color: #0a53be;
-}
+
 
   .carreras h2 {
     color: #003366;
@@ -636,8 +631,11 @@ h5 label {
     }
   
     .TourVirtual {
-      height: 950px; /* Define la altura deseada para recortar */
+      height: 600px; /* Define la altura deseada para recortar */
       overflow: hidden; /* Oculta el contenido que se sale del contenedor */
+      display: flex;
+      justify-content: center; /* Centra horizontalmente */
+      align-items: center; /* Centra verticalmente */
     }
 
   }
