--- a/css/_tpl/cu/huehuetenango.css
+++ b/css/_tpl/cu/huehuetenango.css
@@ -3,7 +3,7 @@
     min-height: 500px;
     /*background-image: -webkit-image-set(url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080') 1x);*/
     /*background-image: -webkit-image-set(url('http://172.173.170.116/img/villa_nueva/villanueva.webp') 1x);*/
-    background-image: -webkit-image-set(url('../../../img/cu/campus-huehuetenango.jpg') 1x);
+    background-image: -webkit-image-set(url('../../../img/cu/campus-huehuetenango.webp') 1x);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -58,4 +58,101 @@
   font-weight: 900;
 }
 
- 
+.Aula .vistas-escritorio div:nth-child(1)::after,
+.Aula .vistas-escritorio div:nth-child(2)::after {
+  border-bottom: #e18333 3px solid;
+  bottom: 1.5px;
+  content: "";
+  display: block;
+  right: 25%;
+  position: absolute;
+  width: 50%;
+}
+
+.Aula .aulas div {
+  aspect-ratio: 1;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.Aula .Learnlab {
+  background-image: url('../../../img/huehuetenango/huehuetenango_laboratorio1.webp');
+}
+
+.Aula .Villanueva_Aula {
+  background-image: url('../../../img/huehuetenango/huehuetenango_laboratorio2.webp');
+}
+
+.Aula .VillaNueva_LaboratorioComputo {
+  background-image: url('../../../img/huehuetenango/huehuetenango_laboratorio1.webp');
+}
+
+.Aula .VillaNueva_Arquitectura_Laboratorio {
+  background-image: url('../../../img/huehuetenango/huehuetenango_laboratorio2.webp');
+}
+
+.Aula .Jutiapa_LaboratorioArquitectura {
+  background-image: url('../../../img/huehuetenango/huehuetenango_laboratorio1.webp');
+}
+
+.Aula .aulas a {
+  background: rgba(0,193,255,.0);
+  font-family: "Urbanist-Bold";
+  left: 0;
+  opacity: 0;
+  top: 0;
+  transition: .5s;
+}
+
+.Aula .aulas .btn {
+  align-items: center;
+  background: none;
+  border-radius: 100%;
+  color: #000;
+  display: flex;
+  font-family: uicons-regular-rounded !important;
+  height: 30px;
+  justify-content: center;
+  mix-blend-mode: screen;
+  opacity: 0;
+  position: absolute;
+  right: 30px;
+  top: -100%;
+  transition: .5s;
+  width: 30px;
+}
+
+.Aula .aulas a:hover {
+  background: rgba(0,193,255,.8);
+  opacity: 1;
+  transition: .5s;
+}
+
+.Aula .aulas a label {
+  margin-top: 111%;
+  opacity: 0;
+  transition: .5s;
+}
+
+.Aula .aulas a:hover label {
+  opacity: 1;
+  margin-top: 0;
+}
+
+.Aula .aulas a:hover .btn {
+  opacity: 1;
+  top: 30px;
+}
+
+.Aula .aulas .btn::before {
+  background: #fff;
+  bottom: 0;
+  border-radius: 100%;
+  content: "";
+  left: 0;
+  mix-blend-mode: color-burn;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
