--- a/css/_tpl/cu/villa-nueva.css
+++ b/css/_tpl/cu/villa-nueva.css
@@ -23,7 +23,7 @@ body{
     min-height: 500px;
     /*background-image: -webkit-image-set(url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080') 1x);*/
     /*background-image: -webkit-image-set(url('http://172.173.170.116/img/villa_nueva/villanueva.webp') 1x);*/
-    background-image: -webkit-image-set(url('../../../img/cu/campus-villanueva.jpg') 1x);
+    background-image: -webkit-image-set(url('../../../img/cu/campus-villanueva.webp') 1x);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
